# ZKachi

./: .gitignore  BENCHMARK.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  VIDEO_SCRIPT.md  plan.md  rust-toolchain.toml  zkachi-brand-v2.html
circuits/roulette/: CLAUDE.md  input.json  package.json  roulette.circom
circuits/roulette/scripts/: compile.sh  prove.sh  setup.sh
contracts/common/: CLAUDE.md  Cargo.toml
contracts/common/src/: constants.rs  lib.rs  types.rs  zk.rs
contracts/hub/: CLAUDE.md  Cargo.toml
contracts/hub/src/: lib.rs  storage.rs  test.rs
contracts/pool/: CLAUDE.md  Cargo.toml
contracts/pool/src/: lib.rs  storage.rs  test.rs
contracts/roulette/: CLAUDE.md  Cargo.toml
contracts/roulette/src/: lib.rs  settlement.rs  storage.rs  test.rs
contracts/verifier/: CLAUDE.md  Cargo.toml
contracts/verifier/src/: circuit.rs  lib.rs  test.rs
cranker/: CLAUDE.md  Dockerfile  cranker.js  package-lock.json  package.json
cranker/lib/: proof.js  seed.js  stellar.js
frontend/: CLAUDE.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AsanohaPattern.tsx  DarumaMascot.tsx  Footer.tsx  HeroMessage.tsx  LiquiditySection.tsx  Navbar.tsx  RouletteWheel.tsx  SectionDivider.tsx  StatsBar.tsx  TrustSection.tsx
frontend/src/contexts/: WalletContext.tsx
frontend/src/hooks/: use-hub.ts  use-pool.ts  use-roulette.ts
frontend/src/lib/: soroban.ts
scripts/: CLAUDE.md  deploy.sh  init.sh  play-round.sh  proof-to-bytes.js  seed-pool.sh
(+21 files in other folders)
